Style buttons to combat bug on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,13 +48,23 @@ a {
 }
 
 .btn {
-    width: 70px;
-    height: 70px;
-    font-size: 250%;
+    width: 80px;
+    height: 80px;
+    outline-color: transparent;
+    border-color: grey;
+    position: relative;
+    border-radius: 0.2em;
+    text-align: center;
+    margin-top: 15px;
+}
+
+.icon {
+    font-size: 50px;
+    position: absolute;
     color: rgb(34, 105, 122);
-    display: inline-block;
-    justify-content: center;
-    align-items: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%)
 }
 
 /* Game result area */
